# bk-training-award-open

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  License.txt  Makefile  package-lock.json  pre_commit_hooks  readme.md  readme_en.md  requirements.txt  urls.py
.github/workflows/: python-ci.yaml
awards_apply/: admin.py  apps.py  drf_serializers.py  models.py  urls.py  views.py
awards_apply/migrations/: 0001_initial.py  0002_approvalrecord.py  0002_auto_20220119_2247.py  0002_auto_20220221_2159.py  0002_auto_20220321_2339.py  0003_auto_20220120_1320.py  0003_auto_20220304_1742.py  0003_auto_20220305_2112.py  (+10 more)
config/: default.py  dev.py  prod.py  stag.py
docs/: contributing.md  dev_guide.md
frontend/: package.json
home_application/: models.py  views.py
src/api/: Makefile  manage.py  pyproject.toml
src/api/bk_award/: asgi.py  urls.py  wsgi.py
src/api/bk_award/apis/: urls.py
src/api/bk_award/awards/: apps.py  constants.py  managers.py  models.py  serializers.py  urls.py  views.py
src/api/bk_award/awards/migrations/: 0001_initial.py
src/api/bk_award/awards/parsers/: __init__.py  approval.py  notification.py
src/api/bk_award/awards/presets/good-study/: levels.yaml
src/api/bk_award/common/: model.py
src/api/bk_award/policies/: apps.py  models.py
src/api/bk_award/policies/migrations/: 0001_initial.py
src/api/bk_award/policies/presets/good-study/: levels.yaml  policies.yaml
src/api/bk_award/settings/: django.py
src/api/bk_award/settings/overlays/: __init__.py  dev.py  prod.py
src/api/bk_award/tests/awards/parsers/: test_approval.py
(+200 files in other folders)
